Migrate to Angular v16.

--- a/package.json
+++ b/package.json
@@ -29,49 +29,47 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production ngx-batch-requests",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "publish": "npm run build && npm publish dist/ngx-batch-requests/"
   },
   "dependencies": {
-    "@angular/animations": "^7.0.0",
-    "@angular/common": "^7.0.0",
-    "@angular/compiler": "^7.0.0",
-    "@angular/core": "^7.0.0",
-    "@angular/forms": "^7.0.0",
-    "@angular/platform-browser": "^7.0.0",
-    "@angular/platform-browser-dynamic": "^7.0.0",
-    "@angular/router": "^7.0.0",
+    "@angular/animations": "^16.2.12",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
     "lodash.defaultsdeep": "^4.6.1",
-    "ngx-rxjs-zone-scheduler": "^0.2.1",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "ngx-rxjs-zone-scheduler": "^16.0.0",
+    "rxjs": "^7.4.0",
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.6",
-    "@angular-devkit/build-ng-packagr": "~0.10.0",
-    "@angular/cli": "^7.0.0",
-    "@angular/compiler-cli": "^7.0.0",
-    "@angular/language-service": "^7.0.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "@angular-devkit/build-angular": "^16.2.15",
+    "@angular/cli": "^16.2.15",
+    "@angular/compiler-cli": "^16.2.12",
+    "@angular/language-service": "^16.2.12",
+    "@types/jasmine": "~4.3.0",
+    "@types/jasminewd2": "^2.0.13",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~4.5.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "~6.4.1",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^4.2.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "ng-packagr": "^16.2.3",
+    "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.29.0",
-    "tslib": "^1.9.0",
+    "tslib": "^2.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "^5.1.6"
   }
 }
