--- a/angular.json
+++ b/angular.json
@@ -10,11 +10,19 @@
       "prefix": "batch",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "tsConfig": "projects/ngx-batch-requests/tsconfig.lib.json",
             "project": "projects/ngx-batch-requests/ng-package.json"
-          }
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ngx-batch-requests/tsconfig.lib.json"
+            },
+            "development": {
+              "tsConfig": "projects/ngx-batch-requests/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
@@ -37,6 +45,6 @@
           }
         }
       }
-    }},
-  "defaultProject": "ngx-batch-requests"
+    }
+  }
 }
