--- a/projects/ngx-batch-requests/package.json
+++ b/projects/ngx-batch-requests/package.json
@@ -28,11 +28,11 @@
   },
   "dependencies": {
     "lodash.defaultsdeep": "^4.6.1",
-    "ngx-rxjs-zone-scheduler": "^0.2.1"
+    "ngx-rxjs-zone-scheduler": "^16.0.0"
   },
   "peerDependencies": {
-    "@angular/common": "^8.2.8",
-    "@angular/core": "^8.2.8",
-    "lodash.defaultsdeep": "^4.6.1"
+    "@angular/common": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "tslib": "^2.0.0"
   }
 }
