--- a/projects/ngx-batch-requests/package.json
+++ b/projects/ngx-batch-requests/package.json
@@ -28,11 +28,11 @@
   },
   "dependencies": {
     "lodash.defaultsdeep": "^4.6.1",
-    "ngx-rxjs-zone-scheduler": "^16.0.0"
+    "ngx-rxjs-zone-scheduler": "^18.0.1",
+    "tslib": "^2.7.0"
   },
   "peerDependencies": {
-    "@angular/common": "^16.2.12",
-    "@angular/core": "^16.2.12",
-    "tslib": "^2.0.0"
+    "@angular/common": "^18.2.4",
+    "@angular/core": "^18.2.4"
   }
 }
