--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "esModuleInterop": true,
-    "declaration": false,
+    "declaration": true,
+    "emitDeclarationOnly": false,
     "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
